# repe-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  interop.yml
bench/grpc-shootout/: Cargo.toml  build.rs
bench/grpc-shootout/benches/: codec.rs
bench/grpc-shootout/proto/: shootout.proto
bench/grpc-shootout/src/: lib.rs
benches/: route_dispatch.rs  server_lifecycle.rs  wire_serialization.rs
dev/: README.md  feature-expansion-plan.md  http-cohosting-and-keyed-peer-registry.md  push-capable-websocket-server.md  streaming-over-websocket-server.md  svs-streaming-producer-integrity.md  typed-numeric-body-fast-path.md  unknown-field-tolerance.md
docs/: cli.md  client.md  fleet.md  index.md  interop.md  numeric-bodies.md  protocol.md  registry.md  server.md  streaming-serialized-values.md  streaming.md  websocket.md
examples/: async_client.rs  async_server.rs  beve_streaming_body.rs  client.rs  json_roundtrip.rs  registry_roundtrip.rs  registry_server.rs  server.rs  stream_pull_vs_push.rs  typed_numeric_body.rs  value_stream.rs  websocket_cohosting.rs  websocket_graceful_server.rs  writer_stream_digest.rs
interop/: README.md
interop/cpp/: CMakeLists.txt  generate_fixtures.cpp
interop/fixtures/: beve_request_struct.repe  beve_request_typed_numeric.repe  beve_request_unknown_key.repe  empty_query_empty_body.repe  error_invalid_body.repe  error_method_not_found.repe  json_request_unknown_key.repe  json_request_with_query.repe  json_response.repe  manifest.json  notify_request.repe  request_query_only.repe
repe-derive/: Cargo.toml
repe-derive/src/: lib.rs
src/: async_client.rs  async_fleet.rs  async_io.rs  async_server.rs  client.rs  constants.rs  error.rs  fleet.rs  header.rs  io.rs  json_pointer.rs  lib.rs  message.rs  peer.rs  registry.rs  server.rs  server_request.rs  stream.rs  structs.rs  udp_client.rs  uniudp_fleet.rs  value_stream.rs  wasm_client.rs  websocket_client.rs  websocket_limits.rs  websocket_server.rs
tests/: allocations.rs  async_client_format_apis.rs  async_client_multiplexing.rs  async_fleet_tests.rs  cli.rs  client_format_apis.rs  client_id_mismatch.rs  client_multiplexing.rs  fleet_tests.rs  interop.rs  json_pointer_tests.rs  registry_tests.rs  repe_tests.rs  slice_fastpath.rs  struct_registration.rs  typed_numeric_body.rs  typed_slice_fastpath.rs  typed_slice_zero_copy.rs  uniudp_fleet_tests.rs  unknown_fields.rs  value_stream.rs  value_stream_async.rs  value_stream_bulk.rs  websocket_limits.rs
tests/common/: mod.rs
