[package]
name = "repe"
version = "2.3.0"
edition = "2024"
rust-version = "1.85"
description = "Rust implementation of the REPE RPC protocol (JSON-focused)"
license = "MIT"
repository = "https://github.com/repe-org/repe-rs"
documentation = "https://repe-org.github.io/repe-rs/"
readme = "README.md"
keywords = ["rpc", "protocol", "repe", "json"]
categories = ["network-programming", "encoding"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "docs/**",
    "src/**",
    "examples/**",
    "tests/**",
]
[features]
default = []
parking-lot = ["dep:parking_lot"]
fleet-udp = ["dep:uniudp"]
websocket = ["dep:futures-util", "dep:tokio-tungstenite"]
websocket-wasm = [
    "dep:futures-channel",
    "dep:futures-util",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
cli = ["websocket", "dep:clap", "dep:clap_complete"]

[[bin]]
name = "repe"
path = "src/bin/repe.rs"
required-features = ["cli"]

[dependencies]
beve = "0.1"
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
thiserror = "1"
repe-derive = { path = "repe-derive", version = "0.1.0" }
parking_lot = { version = "0.12", optional = true }
uniudp = { version = "1.0.0", optional = true }
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tokio-tungstenite = { version = "0.24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "MessageEvent",
    "Window",
    "WebSocket",
] }

[dev-dependencies]
rand = "0.8"
