[package]
name = "repe"
version = "5.0.0"
edition = "2024"
rust-version = "1.89"
description = "Rust implementation of the REPE RPC protocol (JSON-focused)"
license = "MIT"
repository = "https://github.com/repe-org/repe-rs"
documentation = "https://repe-org.github.io/repe-rs/"
readme = "README.md"
keywords = ["rpc", "protocol", "repe", "json"]
categories = ["network-programming", "encoding"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/docs/**",
    "/src/**",
    "/examples/**",
    "/tests/**",
    "/benches/**",
]

[package.metadata.docs.rs]
# Build docs.rs with every feature so intra-doc links into optional,
# feature-gated modules (e.g. the `websocket`-gated WebSocketServer)
# resolve instead of dangling under the empty default feature set.
all-features = true

[features]
default = []
parking-lot = ["dep:parking_lot"]
fleet-udp = ["dep:uniudp"]
websocket = ["dep:futures-util", "dep:tokio-tungstenite", "dep:tokio-util"]
websocket-wasm = [
    "dep:futures-channel",
    "dep:futures-util",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
cli = ["websocket", "dep:clap", "dep:clap_complete"]
# Streaming transfer of a serialized, optionally zstd-compressed in-memory value
# over ordinary REPE request/response (the SVS wire contract). Pulls in `zstd`
# for the compressed path; the engine itself is plain `std` threads + channels.
value-stream = ["dep:zstd"]

[[bin]]
name = "repe"
path = "src/bin/repe.rs"
required-features = ["cli"]

[[example]]
name = "websocket_graceful_server"
required-features = ["websocket"]

[[example]]
name = "websocket_cohosting"
required-features = ["websocket"]

[[example]]
name = "value_stream"
required-features = ["value-stream"]

[[example]]
name = "writer_stream_digest"
required-features = ["value-stream"]

[dependencies]
# beve's default feature set is already lean (core ser/de + streaming +
# typed/complex bulk slice helpers); the heavy MATLAB/HDF5 `mat` interop is opt-in
# there, so repe never needs `default-features = false`. repe uses beve's aligned
# typed-array primitives (`write_aligned_typed_slice_at` /
# `aligned_typed_slice_size` / `read_aligned_typed_slice` /
# `read_aligned_typed_slice_ref`) behind `MessageBuilder::body_aligned_typed_slice`
# and the zero-copy borrowing route (`Router::with_typed_slice_ref` /
# `*::call_typed_slice_aligned`), the streaming complex primitives
# (`to_writer_complex_slice` / `complex_slice_size` behind
# `write_message_complex_slice`), and the `read_typed_slice` / `read_complex_slice`
# bulk decoders behind the typed-numeric body fast path. Pinned to beve 3: its core
# ser/de API is unchanged from 2.x, so the major bump only reflects beve's optional
# `mat` dependency moving forward, which repe does not enable.
beve = "3"
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
thiserror = "1"
repe-derive = { path = "repe-derive", version = "0.1.0" }
parking_lot = { version = "0.12", optional = true }
uniudp = { version = "1.0.0", optional = true }
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
# Streaming zstd codec for the `value-stream` feature (SVS `compression = 1`).
# Optional so the core crate stays free of the libzstd C dependency.
zstd = { version = "0.13", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tokio-tungstenite = { version = "0.24", optional = true }
# `CancellationToken` (in `tokio_util::sync`, gated behind the `rt`
# feature) backs the off-reader handler cancellation signal threaded
# onto `CallContext` and the server-level graceful drain. Pulled in
# only with the `websocket` feature.
tokio-util = { version = "0.7", optional = true, default-features = false, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "MessageEvent",
    "Window",
    "WebSocket",
] }

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Only for tests: construct f16/bf16 values to exercise the half-float element
# types of the typed-numeric body path (the runtime dep on half comes via beve).
half = "2.4"
# Only for the `value-stream` integration tests: independently decompress a
# pulled `.beve.zst` file to assert its contents. Matches the optional runtime
# dep version.
zstd = "0.13"

[[bench]]
# Wire-serialization throughput: `Message::to_vec` vs the new
# `Message::into_wire_bytes` for the WebSocket-style outbound path, sized to
# cover both small responses and multi-MiB streaming bodies.
name = "wire_serialization"
harness = false

[[bench]]
# Router dispatch throughput: registered HashMap routes, `Registry`-backed
# routes, and `RepeStruct`-backed routes, each measured with and without a
# middleware pipeline so the hoisted middleware wrap is visible.
name = "route_dispatch"
harness = false

[[bench]]
# End-to-end server request lifecycle (read -> route -> dispatch -> echo ->
# write) over an in-memory transport, for JSON and typed handlers. Pairs with
# `tests/allocations.rs`, which pins the allocation count of the same cycle.
name = "server_lifecycle"
harness = false
