# Isolated shootout crate: REPE+BEVE vs gRPC+protobuf.
#
# Deliberately NOT a member of the repe package and NOT in repe's dev-deps, so
# tonic/prost never enter the published crate's dependency tree. It pulls `repe`
# in by path and is built/run on its own:
#
#   cd bench/grpc-shootout
#   cargo bench --bench codec      # serialization + framing CPU, no network
#   cargo run --release --bin e2e  # end-to-end round-trip latency
#
# Requires `protoc` on PATH for the build script (brew install protobuf).
[package]
name = "grpc-shootout"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
repe = { path = "../.." }
beve = "2.1"
serde = { version = "1", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "codec"
harness = false
